--- a/docs/de-de/modules/artikel/pages/artikel-manuell-anlegen.adoc
+++ b/docs/de-de/modules/artikel/pages/artikel-manuell-anlegen.adoc
@@ -21,17 +21,12 @@ Auf dieser Seite lernst du, Artikel und Varianten manuell zu erstellen.
 .Manuelle Erstellung vs. Import
 ====
 Diese Seite konzentriert sich auf die manuelle Erstellung.
-plentymarkets enthält aber auch ein xref:daten:ElasticSync.adoc#[Import-Tool], mit dem du Artikel und Varianten importieren kannst.
-Die Idee ist ganz einfach.
-Anstatt Artikeldaten manuell in plentymarkets zu speichern, trägst du die gleiche Informationen in eine CSV-Datei ein und importierst diese Datei dann in dein System.
-
-* Verwende dazu den Import-Typ *Artikel*.
-* xref:daten:praxisbeispiel-elasticsync-variantenanlage.adoc#[Praxisbeispiel: Import von Artikeln und Varianten]
-* xref:daten:elasticSync-artikel.adoc#[Verzeichnis aller Datenfelder für den Artikelimport]
+plentymarkets enthält aber auch ein Import-Tool, mit dem du Artikel und Varianten importieren kannst.
+Ausführlichere Informationen dazu findest du im xref:artikel:artikel-manuell-anlegen.adoc#700[FAQ-Bereich].
 ====
 
 [discrete]
-=== [.underline]##Voraussetzungen##
+==== Voraussetzungen
 
 Diese Seite setzt voraus, dass du bereits Grundkenntnisse über die Artikelstruktur in plentymarkets hast.
 Du sollst den xref:artikel:struktur.adoc#[Unterschied zwischen Artikeln und Varianten] kennen und du sollst wissen, wie Varianten ihre xref:artikel:vererbung.adoc#[Daten vererben].
@@ -57,17 +52,6 @@ Einen neuen Artikel erstellen:
 . Klicke auf icon:plus[role="darkGrey"] und wähle *Standard-Artikel*.
 . Ein Pop-Up Fenster wird geöffnet. Dieses Fenster ist in mehrere Schritte unterteilt. Nimm die Einstellungen in jedem Schritt vor.
 
-[TIP]
-.Standard-Artikel vs. Multipack-Artikel
-//.Standard-Artikel vs. Multipack-Artikel vs. Set-Artikel
-====
-Diese Dropdown-Liste gibt an, welche Art von Artikel du erstellen möchtest.
-Hier wird die Erstellung von Standard-Artikeln, d.h. ganz normalen Artikeln und Varianten beschrieben.
-Ausführlichere Informationen zu den verschiedenen Typen findest du im xref:artikel:artikel-manuell-anlegen.adoc#700[FAQ-Bereich].
-
-*_Hinweis_*: Diese Einstellung kann nicht mehr geändert werden, nachdem du den Artikel erstellt hast.
-====
-
 [.collapseBox]
 .*Schritt: Name*
 --
@@ -76,7 +60,6 @@ Ausführlichere Informationen zu den verschiedenen Typen findest du im xref:arti
 
 [cols="1,4a"]
 |===
-|Einstellung |Erläuterung
 
 | *Artikelname* +
 [red]#(Pflichtfeld)#
@@ -93,22 +76,20 @@ Nachdem du den Artikel erstellt hast, kannst du den Namen in weitere Sprachen ü
 .*Schritt: Kategorien*
 --
 
-[cols="1,4"]
+[cols="1,4a"]
 |===
-|Einstellung |Erläuterung
 
 | *Kategorien wählen* +
 [red]#(Pflichtfeld)#
-a|In welche Kategorie soll der Artikel einsortiert werden?
+|In welche Kategorie soll der Artikel einsortiert werden?
 
 . Klicke auf *Kategorien wählen*. +
 → Ein Pop-Up Fenster wird geöffnet.
-. Erweitere die Einträge (icon:chevron-right[role="darkGrey"]) und wähle alle Kategorien (icon:check-square[role="blue"]), in denen dieser Artikel erscheinen soll.
+. Erweitere die Einträge (icon:chevron-right[role="darkGrey"]) und wähle alle Kategorien (icon:check-square[role="blue"]), in denen der Artikel erscheinen soll.
+Diese Liste enthält nur die xref:artikel:kategorien.adoc#[Kategorien], die du bereits in plentymarkets angelegt hast.
 . Klicke auf *Übernehmen*. +
 → Die gewählten Kategorien werden als Tabelle dargestellt.
 Klicke auf material:delete[role="darkGrey"], um eine Kategorie aus dieser Liste zu entfernen, oder klicke auf icon:pencil[role="darkGrey"] *Kategorien wählen*, um weitere Kategorien hinzuzufügen.
-
-*_Hinweis_*: Diese Liste enthält nur die xref:artikel:kategorien.adoc#[Kategorien], die du bereits in plentymarkets angelegt hast.
 
 |===
 
@@ -123,7 +104,6 @@ Hat ein Artikel mehrere Varianten, kann die Hauptvariante entweder selbst ein ve
 
 [cols="1s,4"]
 |===
-|Einstellung |Erläuterung
 
 | Variantennr.
 |Gib eine Nummer für die Hauptvariante ein.
@@ -139,11 +119,10 @@ Das heißt, die Hauptvariante kann Attribute besitzen, muss es aber nicht.
 . Klicke auf *Attribute wählen*. +
 → Ein Pop-Up Fenster wird geöffnet.
 . Erweitere die Attribute (icon:chevron-right[role="darkGrey"]) und wähle die Attributwerte (icon:check-square[role="blue"]), die du für die Hauptvariante verwenden willst, z.B. die Größe "klein" und die Farbe "rot".
+Diese Liste enthält nur die xref:artikel:attribute.adoc#[Attribute und Werte], die du bereits in plentymarkets angelegt hast.
 . Klicke auf *Übernehmen*. +
 → Die gewählten Attributwerte werden als Tabelle dargestellt.
 Klicke auf material:delete[role="darkGrey"], um einen Attributwert aus dieser Liste zu entfernen, oder klicke auf icon:pencil[role="darkGrey"] *Attribute wählen*, um weitere Attributwerte hinzuzufügen.
-
-*_Hinweis_*: Diese Liste enthält nur die xref:artikel:attribute.adoc#[Attribute und Werte], die du bereits in plentymarkets angelegt hast.
 
 *_Empfehlung_*: Es ist technisch möglich, Attribute hier auszuwählen. Wir empfehlen dies jedoch nicht.
 Vielmehr empfehlen wir dir, zuerst den neuen Artikel ohne Attribute anzulegen. Anschließend empfehlen wir dir, Attribute auszuwählen, während du die xref:artikel:artikel-manuell-anlegen.adoc#300[benötigten Varianten erstellst]. +
@@ -159,7 +138,6 @@ Im Nachhinein bist du also flexibler.
 
 [cols="1s,4"]
 |===
-|Einstellung |Erläuterung
 
 | Zusammenfassung
 a|Hier siehst du eine Zusammenfassung deiner gewählten Einstellungen.
@@ -207,7 +185,6 @@ Benötigte Varianten erstellen:
 
 [cols="1s,4"]
 |===
-|Einstellung |Erläuterung
 
 | Inhalt +
 Einheit
@@ -231,13 +208,12 @@ a|Nutze diesen Bereich, wenn die Varianten sich durch ihre Attributwerte untersc
 . Klicke auf *Attribute auswählen*. +
 → Ein Pop-Up Fenster wird geöffnet.
 . Erweitere die Attribute (icon:chevron-right[role="darkGrey"]) und wähle alle Attributwerte (icon:check-square[role="blue"]), die du verwenden willst, z.B. die Größen "S", "M", "L" und die Farben "grün" und "blau".
+Diese Liste enthält nur die xref:artikel:attribute.adoc#[Attribute und Werte], die du bereits in plentymarkets angelegt hast.
 . Klicke auf *Übernehmen*. +
 → Die gewählten Attributwerte werden als Tabelle dargestellt.
 Klicke auf icon:pencil[role="darkGrey"] *Attribute auswählen*, wenn du deine Auswahl ändern möchtest.
 . Klicke auf *Vorschau* und vergewissere dich, dass die Kombinationen korrekt sind.
 . Klicke auf *Varianten erstellen*.
-
-*_Hinweis_*: Diese Liste enthält nur die xref:artikel:attribute.adoc#[Attribute und Werte], die du bereits in plentymarkets angelegt hast.
 
 |===
 
@@ -249,7 +225,6 @@ Klicke auf icon:pencil[role="darkGrey"] *Attribute auswählen*, wenn du deine Au
 
 [cols="1s,4"]
 |===
-|Einstellung |Erläuterung
 
 | Vorschau
 |Nutze diesen Bereich, wenn du dich vergewissern willst, dass die Kombinationen korrekt sind.
@@ -268,7 +243,6 @@ Es gibt keine Begrenzung, wie viele Kombinationen möglich sind.
 
 [cols="1s,4"]
 |===
-|Einstellung |Erläuterung
 
 | Zusammenfassung
 |Hier siehst du eine Bestätigung, dass die Varianten erstellt wurden.
@@ -442,5 +416,20 @@ xref:artikel:multipack-paket-set.adoc#100[Weitere Informationen zur Erstellung].
 //xref:artikel:multipack-paket-set.adoc#300[Weitere Informationen zur Erstellung].
 
 *_Hinweis_*: Diese Einstellung kann nicht mehr geändert werden, nachdem du den Artikel erstellt hast.
+
+--
+
+[.collapseBox]
+.*Manuelle Erstellung vs. Import*
+--
+
+Diese Seite konzentriert sich auf die manuelle Erstellung.
+plentymarkets enthält aber auch ein xref:daten:ElasticSync.adoc#[Import-Tool], mit dem du Artikel und Varianten importieren kannst.
+Die Idee ist ganz einfach.
+Anstatt Artikeldaten manuell in plentymarkets zu speichern, trägst du die gleiche Informationen in eine CSV-Datei ein und importierst diese Datei dann in dein System.
+
+* Verwende dazu den Import-Typ *Artikel*.
+* xref:daten:praxisbeispiel-elasticsync-variantenanlage.adoc#[Praxisbeispiel: Import von Artikeln und Varianten]
+* xref:daten:elasticSync-artikel.adoc#[Verzeichnis aller Datenfelder für den Artikelimport]
 
 --
