--- a/docs/de-de/modules/artikel/pages/multipack-paket-set.adoc
+++ b/docs/de-de/modules/artikel/pages/multipack-paket-set.adoc
@@ -1,18 +1,17 @@
-= Neue UI: Multipacks und Artikelpakete
+= Multipacks und Artikelpakete (neue Artikel-UI)
 :keywords: Neue Artikel-UI, Artikel » Artikel-UI, Artikel zusammenfassen, Artikel kombinieren, Produkte zusammenfassen, Produkte kombinieren, Varianten zusammenfassen, Varianten kombinieren, Kombiangebot, Kombiangebote, Multipack, Multipacks, Multi-Pack, Multi-Packs, Multi Pack, Multi Packs, Artikelpaket, Artikelpakete, Artikel-Paket, Artikel-Pakete, Artikel Paket, Artikel Pakete, Paket, Pakete, Kit, Geschenkset, Bundle, Bundles, Bestandteil, Bestandteile, Komponent, Komponente, Paketbestandteil, Paketbestandteile, Paket-Bestandteil, Paket-Bestandteile, Paketautomatik
 :description: Erfahre, wie du Produkte in plentymarkets kombinierst und sie als eine Verkaufseinheit anbietest.
 :id: 41SB5EN
 :author: team-item
 
 ////
-zuletzt bearbeitet 05.10.2022
+zuletzt bearbeitet 06.10.2022
 ////
 
 //ToDo - sobald Sets mit der neue UI kompatibel sind, dann folgende Keywords ergänzen:
 //Set, Sets, Artikelset, Artikelsets, Artikel-Set, Artikel-Sets, Artikel Set, Artikel Sets, Ab-Preis, Ab-Preise, Ab Preis, Ab Preise, Setpreis, Setbestandteil, Setbestandteile, Setbestandteilen
 //ToDo - sobald Sets mit der neue UI kompatibel sind, dann den Kapitel hinzufügen und auch die Preamble-Text anpassen, um Sets zu erwähnen
 //ToDo - Gifs ergänzen
-//ToDo - Feedback einholen
 //Kommentare innerhalb der Seite abarbeiten
 //FAQ Bereich ergänzen und die Pakete-Varianten-Frage überarbeiten
 
@@ -23,16 +22,12 @@ Diese Seite beschreibt das Grundkonzept und die manuelle Erstellung von Multipac
 .Manuelle Erstellung vs. Import
 ====
 Diese Seite konzentriert sich auf die manuelle Erstellung.
-plentymarkets enthält aber auch ein xref:daten:ElasticSync.adoc#[Import-Tool], mit dem du Multipacks und Artikelpakete importieren kannst.
-Die Idee ist ganz einfach.
-Anstatt Artikeldaten manuell in plentymarkets zu speichern, trägst du die gleiche Informationen in eine CSV-Datei ein und importierst diese Datei dann in dein System.
-
-* Verwende dazu den Import-Typ *Artikel*.
-* Gib mit Hilfe des Zuordnungsfeldes xref:daten:elasticSync-artikel.adoc#250[Artikel / Typ] an, welche Art von Artikel du importieren willst.
+plentymarkets enthält aber auch ein Import-Tool, mit dem du Multipacks und Artikelpakete importieren kannst.
+Ausführlichere Informationen dazu findest du im xref:artikel:multipack-paket-set.adoc#400[FAQ-Bereich].
 ====
 
 [discrete]
-=== [.underline]##Voraussetzungen##
+==== Voraussetzungen
 
 Diese Seite setzt voraus, dass du bereits Grundkenntnisse über die Artikelstruktur in plentymarkets hast.
 Du sollst den xref:artikel:struktur.adoc#[Unterschied zwischen Artikeln und Varianten] kennen und du sollst wissen, wie Varianten ihre xref:artikel:vererbung.adoc#[Daten vererben].
@@ -71,17 +66,6 @@ Ein neues Multipack erstellen:
 . Klicke auf icon:plus[role="darkGrey"] und wähle *Multipack-Artikel*.
 . Ein Pop-Up Fenster wird geöffnet. Dieses Fenster ist in mehrere Schritte unterteilt. Nimm die Einstellungen in jedem Schritt vor.
 
-[TIP]
-.Standard-Artikel vs. Multipack-Artikel
-//.Standard-Artikel vs. Multipack-Artikel vs. Set-Artikel
-====
-Diese Dropdown-Liste gibt an, welche Art von Artikel du erstellen möchtest.
-Hier wird die Erstellung von Multipack-Artikeln beschrieben.
-Ausführlichere Informationen zu den verschiedenen Typen findest du im xref:artikel:multipack-paket-set.adoc#250[FAQ-Bereich].
-
-*_Hinweis_*: Diese Einstellung kann nicht mehr geändert werden, nachdem du den Artikel erstellt hast.
-====
-
 [.collapseBox]
 .*Schritt: Name*
 --
@@ -92,7 +76,6 @@ Ausführlichere Informationen zu den verschiedenen Typen findest du im xref:arti
 
 [cols="1,4a"]
 |===
-|Einstellung |Erläuterung
 
 | *Artikelname* +
 [red]#(Pflichtfeld)#
@@ -113,7 +96,6 @@ Nachdem du den Artikel erstellt hast, kannst du den Namen in weitere Sprachen ü
 
 [cols="1,4"]
 |===
-|Einstellung |Erläuterung
 
 | *Kategorien wählen* +
 [red]#(Pflichtfeld)#
@@ -121,12 +103,11 @@ a|In welche Kategorie soll der Artikel einsortiert werden?
 
 . Klicke auf *Kategorien wählen*. +
 → Ein Pop-Up Fenster wird geöffnet.
-. Erweitere die Einträge (icon:chevron-right[role="darkGrey"]) und wähle alle Kategorien (icon:check-square[role="blue"]), in denen dieser Artikel erscheinen soll.
+. Erweitere die Einträge (icon:chevron-right[role="darkGrey"]) und wähle alle Kategorien (icon:check-square[role="blue"]), in denen der Artikel erscheinen soll.
+Diese Liste enthält nur die xref:artikel:kategorien.adoc#[Kategorien], die du bereits in plentymarkets angelegt hast.
 . Klicke auf *Übernehmen*. +
 → Die gewählten Kategorien werden als Tabelle dargestellt.
 Klicke auf material:delete[role="darkGrey"], um eine Kategorie aus dieser Liste zu entfernen, oder klicke auf icon:pencil[role="darkGrey"] *Kategorien wählen*, um weitere Kategorien hinzuzufügen.
-
-*_Hinweis_*: Diese Liste enthält nur die xref:artikel:kategorien.adoc#[Kategorien], die du bereits in plentymarkets angelegt hast.
 
 |===
 
@@ -144,7 +125,6 @@ Die erste Variante eines Artikels wird als Hauptvariante bezeichnet.
 
 [cols="1s,4"]
 |===
-|Einstellung |Erläuterung
 
 | Variantennr.
 |Gib eine Nummer für die Hauptvariante ein.
@@ -159,15 +139,13 @@ a|Die Hauptvariante kann Attribute besitzen, muss es aber nicht.
 . Klicke auf *Attribute wählen*. +
 → Ein Pop-Up Fenster wird geöffnet.
 . Erweitere die Attribute (icon:chevron-right[role="darkGrey"]) und wähle die Attributwerte (icon:check-square[role="blue"]), die du für die Hauptvariante verwenden willst, z.B. "mit Kohlensäure".
+Diese Liste enthält nur die xref:artikel:attribute.adoc#[Attribute und Werte], die du bereits in plentymarkets angelegt hast.
 . Klicke auf *Übernehmen*. +
 → Die gewählten Attributwerte werden als Tabelle dargestellt.
 Klicke auf material:delete[role="darkGrey"], um einen Attributwert aus dieser Liste zu entfernen, oder klicke auf icon:pencil[role="darkGrey"] *Attribute wählen*, um weitere Attributwerte hinzuzufügen.
 
 *_Hinweis_*: Alle Varianten eines Multipacks haben dieselben Attribute.
-Innerhalb eines Multipacks können Endkunden also nicht z.B. zwischen Wasser mit und ohne Kohlensäure wählen.
-Sie können nur zwischen den verschiedenen Stückzahlen wählen.
-
-*_Hinweis_*: Diese Liste enthält nur die xref:artikel:attribute.adoc#[Attribute und Werte], die du bereits in plentymarkets angelegt hast.
+Innerhalb eines Multipacks können also nicht z.B. manche Wasserflaschen mit und andere ohne Kohlensäure sein.
 
 |===
 
@@ -181,7 +159,6 @@ Sie können nur zwischen den verschiedenen Stückzahlen wählen.
 
 [cols="1s,4"]
 |===
-|Einstellung |Erläuterung
 
 | Zusammenfassung
 a|Hier siehst du eine Zusammenfassung deiner gewählten Einstellungen.
@@ -228,7 +205,6 @@ Benötigte Stückzahlen erstellen:
 
 [cols="1,4a"]
 |===
-|Einstellung |Erläuterung
 
 | *Größe der Packung*
 |Die Hauptvariante entspricht der kleinsten Verkaufseinheit des Produkts, z.B. 1 Flasche.
@@ -250,7 +226,6 @@ Hier erstellst du alle weiteren Kombinationen dieser kleinsten Verkaufseinheit, 
 
 [cols="1s,4"]
 |===
-|Einstellung |Erläuterung
 
 | Zusammenfassung
 a|Hier siehst du eine Zusammenfassung deiner gewählten Einstellungen.
@@ -279,26 +254,58 @@ Nach der Erstellung hast du folgende Möglichkeiten:
 [#130]
 === Weitere Produktdaten hinzufügen
 
-Während der Erstellung hast du bereits einige grundlegende Produktinformationen eingegeben.
-Füge jetzt weitere Informationen hinzu.
-Zum Beispiel kannst du:
+Während der Erstellung hast du bereits einige grundlegende Informationen angegeben.
+Füge jetzt weitere Produktdaten hinzu.
+Wie soll das Multipack zum Beispiel aussehen?
+Welche Bilder und Texte sollen angezeigt werden?
 
-* xref:artikel:verzeichnis.adoc#40[Bilder hochladen]
-* xref:artikel:verzeichnis.adoc#50[Produkttexte schreiben]
-* xref:artikel:verzeichnis.adoc#340[Preise hinterlegen]
-* xref:artikel:verzeichnis.adoc#30[Bestandsinformationen einsehen]
+[.collapseBox]
+.*Verkaufspreis*
+--
 
-[TIP]
-.Besonderheiten von Multipacks
-====
-Multipacks unterscheiden sich etwas von normalen Artikeln.
-Beachte daher beim Hinzufügen von Produktinformationen die folgenden Besonderheiten:
+Wie viel soll das Multipack kosten, wenn es als 1er, 6er- oder 12er-Pack verkauft wird?
+Entscheide, welcher Preis für jede Stückzahl gelten soll.
+Dazu musst du die Vererbung von Verkaufspreisen deaktivieren und Preise für jede Stückzahl einzeln speichern.
 
-* Deaktiviere die Vererbung des Verkaufspreises und speichere einen eigenen Preis.
-* Bestand wird nur an der Hauptvariante gepflegt.
+---
+
+[.instruction]
+Preis für die Hauptvariante festlegen:
+
+. Öffne das Menü *Artikel » Artikel-UI » [Multipack öffnen] » [Hauptvariante öffnen] » Element: Verkaufspreise*.
+. Klicke auf icon:plus[role="darkGrey"]. +
+→ Es öffnet sich ein Pop-up-Fenster.
+. Wähle die Verkaufspreise (icon:check-square[role="blue"]), die du mit der Variante verknüpfen willst.
+. Klicke auf *Übernehmen*. +
+→ Die Daten werden als Tabelle dargestellt.
+. Gib den Geldbetrag ein.
+. *Speichere* (terra:save[role="darkGrey"]) die Einstellungen.
+
+---
+
+[.instruction]
+Preis für eine Untervariante festlegen:
+
+. Öffne das Menü *Artikel » Artikel-UI » [Multipack öffnen] » [Untervariante öffnen]*.
+. Klicke auf *Vererbung* (terra:item_variation_inheritance[role="darkGrey"]) in der oberen Symbolleiste.
+. Deaktiviere die Vererbung von Verkaufspreisen.
+. Klicke auf *Ausführen*.
+. Navigiere zum Element *Verkaufspreise*.
+. Gib einen abweichenden Geldbetrag für die Untervariante ein.
+. *Speichere* (terra:save[role="darkGrey"]) die Einstellungen.
+. Wiederhole den Vorgang für die weiteren Stückzahlen.
+
+--
+
+[.collapseBox]
+.*Warenbestand*
+--
+
+Bestand wird nur an der Hauptvariante gepflegt.
 Das heißt, der Bestand der weiteren Varianten ist rein informativ.
 Wenn sich der Bestand der Hauptvariante ändert, wird der Bestand für die anderen Varianten des Artikels neu berechnet.
-====
+
+--
 
 [#140]
 === Multipack im Frontend anschauen
@@ -477,17 +484,6 @@ Ein Bestandteil erstellen:
 xref:artikel:artikel-manuell-anlegen.adoc#200[Weitere Informationen zu den Einstellungen].
 
 [TIP]
-.Standard-Artikel vs. Multipack-Artikel
-//.Standard-Artikel vs. Multipack-Artikel vs. Set-Artikel
-====
-Diese Dropdown-Liste gibt an, welche Art von Artikel du erstellen möchtest.
-Die Bestandteile sind Standard-Artikel.
-Ausführlichere Informationen zu den verschiedenen Typen findest du im xref:artikel:multipack-paket-set.adoc#250[FAQ-Bereich].
-
-*_Hinweis_*: Diese Einstellung kann nicht mehr geändert werden, nachdem du den Artikel erstellt hast.
-====
-
-[TIP]
 .Füge noch weitere Produktdaten für die Bestandteile hinzu
 ====
 Wie soll der Bestandteil aussehen, wenn er als Einzelartikel angeboten wird?
@@ -519,17 +515,7 @@ Einen neuen Artikel erstellen:
 . Klicke auf icon:plus[role="darkGrey"] und wähle *Standard-Artikel*.
 . Ein Pop-Up Fenster wird geöffnet. Dieses Fenster ist in mehrere Schritte unterteilt. Nimm die Einstellungen in jedem Schritt vor.
 xref:artikel:artikel-manuell-anlegen.adoc#200[Weitere Informationen zu den Einstellungen].
-
-[TIP]
-.Standard-Artikel vs. Multipack-Artikel
-//.Standard-Artikel vs. Multipack-Artikel vs. Set-Artikel
-====
-Diese Dropdown-Liste gibt an, welche Art von Artikel du erstellen möchtest.
-Das Paket selbst ist ein Standard-Artikel.
-Ausführlichere Informationen zu den verschiedenen Typen findest du im xref:artikel:multipack-paket-set.adoc#250[FAQ-Bereich].
-
-*_Hinweis_*: Diese Einstellung kann nicht mehr geändert werden, nachdem du den Artikel erstellt hast.
-====
+. Anschließend fügst du die Bestandteile dem Paket hinzu.
 
 [TIP]
 .Vorhandenen Artikel als Paket verwenden
@@ -624,7 +610,6 @@ Es gibt aber auch die Möglichkeit, diese Kennzahlen automatisch berechnen zu la
 
 [cols="1,3"]
 |===
-|Einstellung |Erläuterung
 
 | *Paket: Bruttogewicht automatisch aus Bestandteilen berechnen*
 |Das Butto-Gewicht wird automatisch anhand der Bestandteile berechnet.
@@ -793,8 +778,8 @@ Arbeite xref:artikel:checkliste-artikel-anzeige.adoc#[diese Checkliste] durch un
 Diese Checkliste hilft dir, mögliche Fehlerquellen bei der Artikelsichtbarkeit ausfindig zu machen.
 ====
 
-[#250]
-=== FAQ
+[#400]
+== Fragen und Antworten
 
 [.collapseBox]
 .*Standard-Artikel vs. Multipack-Artikel*
@@ -816,6 +801,20 @@ xref:artikel:multipack-paket-set.adoc#100[Weitere Informationen zur Erstellung].
 //xref:artikel:multipack-paket-set.adoc#300[Weitere Informationen zur Erstellung].
 
 *_Hinweis_*: Diese Einstellung kann nicht mehr geändert werden, nachdem du den Artikel erstellt hast.
+
+--
+
+[.collapseBox]
+.*Manuelle Erstellung vs. Import*
+--
+
+Diese Seite konzentriert sich auf die manuelle Erstellung.
+plentymarkets enthält aber auch ein xref:daten:ElasticSync.adoc#[Import-Tool], mit dem du Multipacks und Artikelpakete importieren kannst.
+Die Idee ist ganz einfach.
+Anstatt Artikeldaten manuell in plentymarkets zu speichern, trägst du die gleiche Informationen in eine CSV-Datei ein und importierst diese Datei dann in dein System.
+
+* Verwende dazu den Import-Typ *Artikel*.
+* Gib mit Hilfe des Zuordnungsfeldes xref:daten:elasticSync-artikel.adoc#250[Artikel / Typ] an, welche Art von Artikel du importieren willst.
 
 --
 
